build(webpack): init webpack

--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
     <!-- Les images et logos sont disponibles dans ./resources -->
     <img src="./resources/hotel.jpg"/>
 </body>
+<script src="./dist/main.js"></script>
 </html>
