feat(step-3): create card hotel

--- a/index.html
+++ b/index.html
@@ -6,8 +6,57 @@
     <link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
 <body>
-    <!-- Les images et logos sont disponibles dans ./resources -->
-    <img src="./resources/hotel.jpg"/>
+    <div class="hotel">
+        <div class="hotel-details">
+            <img class="hotel-image" src="./resources/hotel.jpg"/>
+            <div class="hotel-info">
+                <div class="hotel-title">
+                    <span>Novotel Paris Les Halles</span>
+                    <img src="./resources/rating-star.svg" height="10px" />
+                    <img src="./resources/rating-star.svg" height="10px" />
+                    <img src="./resources/rating-star.svg" height="10px" />
+                    <img src="./resources/rating-star.svg" height="10px" />
+                </div>
+
+                <div class="hotel-distance">hotel - 0.6 km de votre recherche</div>
+                
+                <div class="hotel-opinions">
+                    <img class="opinions-image" src="./resources/tripadvisor.png" />
+                    <span>4/5</span>
+                    <span>(5426 Avis)</span>
+                </div>
+
+                <div class="hotel-options">
+                    <img src="./resources/parking.svg" height="25px" />
+                    <img src="./resources/wifi.svg" height="25px" />
+                    <img src="./resources/beverage.svg" height="25px" />
+                    <img src="./resources/restaurant.svg" height="25px" />
+                    <img src="./resources/air-conditioning.svg" height="25px" />
+                </div>
+
+                <div class="hotel-price">
+                    <div class="price-from">tarif à partir de (1)</div>
+                    <div class="price-details">
+                        <div class="price-details-1">
+                            <span>Pour 1 nuit</span>
+                            <span>1 adulte</span>
+                        </div>
+                        <div class="price-details-2">
+                            <span>Public <b>220 €</b></span>
+                            <span>Membre <b>209 €</b></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hotel-action">
+            <div></div>
+            <div>
+                <a href="">Voir le calendrier des prix</a>
+                <button>Selectionner une chambre</button>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="./dist/main.js"></script>
 </html>
